# apcx

./: .gitignore  APCSequencer.wixpdb  APCX.jucer  CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: build.yml
Source/: HardwareDisplay.hpp  ModifierButton.cpp  ModifierButton.hpp  MusicTheory.cpp  MusicTheory.hpp  NoteButton.cpp  NoteButton.hpp  NoteData.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  StepButton.cpp  StepButton.hpp
wix/: Package.wxs  license.rtf
